crates/uv-requirements-txt/src/snapshots/uv_requirements_txt__test__line-endings-whitespace.txt.snap
---
source: crates/uv-requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "numpy",
                    ),
                    extras: [],
                    version_or_url: None,
                    marker: true,
                    origin: Some(
                        File(
                            "<REQUIREMENTS_DIR>/whitespace.txt",
                        ),
                    ),
                },
            ),
            hashes: [],
        },
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "pandas",
                    ),
                    extras: [
                        ExtraName(
                            "tabulate",
                        ),
                    ],
                    version_or_url: Some(
                        Url(
                            VerbatimParsedUrl {
                                parsed_url: GitDirectory(
                                    ParsedGitDirectoryUrl {
                                        url: GitUrl {
                                            url: DisplaySafeUrl {
                                                scheme: "https",
                                                cannot_be_a_base: false,
                                                username: "",
                                                password: None,
                                                host: Some(
                                                    Domain(
                                                        "github.com",
                                                    ),
                                                ),
                                                port: None,
                                                path: "/pandas-dev/pandas.git",
                                                query: None,
                                                fragment: None,
                                            },
                                            repository: RepositoryUrl {
                                                repo_url: DisplaySafeUrl {
                                                    scheme: "https",
                                                    cannot_be_a_base: false,
                                                    username: "",
                                                    password: None,
                                                    host: Some(
                                                        Domain(
                                                            "github.com",
                                                        ),
                                                    ),
                                                    port: None,
                                                    path: "/pandas-dev/pandas",
                                                    query: None,
                                                    fragment: None,
                                                },
                                                with_lfs: None,
                                            },
                                            reference: DefaultBranch,
                                            precise: None,
                                            lfs: Disabled,
                                        },
                                        subdirectory: None,
                                    },
                                ),
                                verbatim: VerbatimUrl {
                                    url: DisplaySafeUrl {
                                        scheme: "git+https",
                                        cannot_be_a_base: false,
                                        username: "",
                                        password: None,
                                        host: Some(
                                            Domain(
                                                "github.com",
                                            ),
                                        ),
                                        port: None,
                                        path: "/pandas-dev/pandas.git",
                                        query: None,
                                        fragment: None,
                                    },
                                    given: Some(
                                        "git+https://github.com/pandas-dev/pandas.git",
                                    ),
                                    expanded: false,
                                    force_relative: false,
                                },
                            },
                        ),
                    ),
                    marker: true,
                    origin: Some(
                        File(
                            "<REQUIREMENTS_DIR>/whitespace.txt",
                        ),
                    ),
                },
            ),
            hashes: [],
        },
    ],
    constraints: [],
    editables: [],
    index_url: None,
    extra_index_urls: [],
    find_links: [],
    no_index: false,
    require_hashes: None,
    no_binary: None,
    only_binary: None,
}
