crates/uv-requirements-txt/src/snapshots/uv_requirements_txt__test__parse-constraints-a.txt.snap
---
source: crates/uv-requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "django-debug-toolbar",
                    ),
                    extras: [],
                    version_or_url: Some(
                        VersionSpecifier(
                            VersionSpecifiers(
                                [
                                    VersionSpecifier {
                                        operator: LessThan,
                                        version: "2.2",
                                    },
                                ],
                            ),
                        ),
                    ),
                    marker: true,
                    origin: Some(
                        File(
                            "<REQUIREMENTS_DIR>/constraints-a.txt",
                        ),
                    ),
                },
            ),
            hashes: [],
        },
    ],
    constraints: [
        RequirementEntry {
            requirement: Requirement {
                name: PackageName(
                    "django",
                ),
                extras: [],
                version_or_url: Some(
                    VersionSpecifier(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "2.1.15",
                                },
                            ],
                        ),
                    ),
                ),
                marker: true,
                origin: Some(
                    File(
                        "<REQUIREMENTS_DIR>/constraints-b.txt",
                    ),
                ),
            },
            hashes: [],
        },
        RequirementEntry {
            requirement: Requirement {
                name: PackageName(
                    "pytz",
                ),
                extras: [],
                version_or_url: Some(
                    VersionSpecifier(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "2023.3",
                                },
                            ],
                        ),
                    ),
                ),
                marker: true,
                origin: Some(
                    File(
                        "<REQUIREMENTS_DIR>/constraints-b.txt",
                    ),
                ),
            },
            hashes: [],
        },
    ],
    editables: [],
    index_url: None,
    extra_index_urls: [],
    find_links: [],
    no_index: false,
    require_hashes: None,
    no_binary: None,
    only_binary: None,
}
